# multimodal-mental-health-foundation-model

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
configs/: eval_safety.yaml  train_lora.yaml  train_multimodal_clip.yaml
data/cards/: DATASET_CARD_TEMPLATE.md
docs/guidelines/: MODEL_CARD_TEMPLATE.md  SAFETY_POLICY.md
docs/research/: DATASET_SOURCES.md  MULTIMODAL_DATA_SOURCES.md  PROJECT_CHARTER.md
examples/: multimodal_manifest.jsonl  synthetic_dataset.jsonl
examples/media/: frame_0002.txt  synthetic_card.txt
scripts/: extract_video_frames.py  train_multimodal_clip.py  validate_dataset.py  validate_multimodal_manifest.py
src/mhfm/: __init__.py  dataset.py  multimodal_dataset.py  multimodal_schema.py  schema.py
tests/: test_dataset.py  test_multimodal_dataset.py
